Cambio atencion cliente a boton sobre

--- a/src/main/resources/templates/peliculas.html
+++ b/src/main/resources/templates/peliculas.html
@@ -11,7 +11,16 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">Peliculas</h1>
+            <div class="d-flex flex-row align-items-center mt-5">
+                <h1>Listado de Peliculas</h1>
+                <form class="d-flex justify-content-between ms-5">
+                    <input type="text">
+                    <button class="ms-2">A ↓</button>
+                    <button>Duración ↓</button>
+                </form>
+            </div>
+            
+            <p>Seleccione el cine al que desee acudir:</p>
         </div>
     </main>
 
