--- a/src/main/resources/templates/peliculas.html
+++ b/src/main/resources/templates/peliculas.html
@@ -11,17 +11,45 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <div class="d-flex flex-row align-items-center mt-5">
-                <h1>Listado de Peliculas</h1>
-                <form class="d-flex justify-content-between ms-5">
-                    <input type="text">
-                    <button class="ms-2">A ↓</button>
-                    <button>Duración ↓</button>
-                </form>
+            <div class="content">
+
+                <h1 class="mt-5">Listado de Peliculas</h1> 
+                
+                <div class="d-flex flex-row align-items-center mt-5">
+                    <select class="form-select w-50" aria-label="Seleccion de Cine">
+                        <option selected>Seleccione un cine</option>
+                        <option value="1">Madrid - La Gavia</option>
+                        <option value="2">Madrid - Plaza Rio 2</option>
+                        <option value="3">Barcelona -  Barnasud</option>
+                        <option value="4">Barcelona -  Diagonal</option>
+                        <option value="5">Valencia - Bonaire</option>
+                      </select>
+                      <form class="d-flex w-75 ms-5">
+                        <input type="text" placeholder="Busca un título o una categoría" class="w-75">
+                        <button type="button" class="btn btn-dark ms-2">A ↓</button>
+                        <button type="button" class="btn btn-dark ms-2">Duración ↓</button>
+                    </form>
+                </div>
+                <div class="table-responsive mt-5">
+                    <table class="table align-middle">
+                      <thead></thead>
+                      <tbody>
+                        <tr>
+                            <td class="d-flex align-items-center"><img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
+                            <td>El buen patrón</td>
+                            <td>120 min</td>
+                            <td>Comedia</td>
+                            <td><button type="button" class="btn btn-dark btn-sm ms-3">12:00</button><p class="mt-2">10 butacas</p></td>
+                            <td><button type="button" class="btn btn-dark btn-sm ms-2">15:00</button><p class="mt-2">7 butacas</p></td>
+                            <td><button type="button" class="btn btn-dark btn-sm ms-2" disabled>18:00</button><p class="mt-2 text-danger bold">AGOTADO</p></td>
+                            <td><button type="button" class="btn btn-dark btn-sm ms-2">21:00</button><p class="mt-2 text-danger">2 butacas</p></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
             </div>
-            
-            <p>Seleccione el cine al que desee acudir:</p>
         </div>
+
     </main>
 
     <th:block th:replace="fragments/footer.html :: footer" />
