Mas cambios en listado peliculas

--- a/src/main/resources/templates/peliculas.html
+++ b/src/main/resources/templates/peliculas.html
@@ -45,7 +45,7 @@
                             <td><button type="button" class="btn btn-dark btn-sm ms-2">21:00</button><p class="mt-2 text-danger">2 butacas</p></td>
                         </tr>
                         <tr>
-                            <td class="d-flex align-items-center"><img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
+                            <td class="d-flex align-items-center"><img th:src="@{/img/Delicioso-886756010-mmed.jpg}" src="/img/Delicioso-886756010-mmed.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
                             <td>Delicioso</td>
                             <td>112 min</td>
                             <td>Comedia-Historia</td>
@@ -55,7 +55,7 @@
                             <td></td>
                         </tr>
                         <tr>
-                            <td class="d-flex align-items-center"><img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
+                            <td class="d-flex align-items-center"><img th:src="@{/img/Belfast-622346571-large.jpg}" src="/img/Belfast-622346571-large.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
                             <td>Belfast</td>
                             <td>97 min</td>
                             <td>Drama</td>
@@ -65,7 +65,7 @@
                             <td></td>
                         </tr>
                         <tr>
-                            <td class="d-flex align-items-center"><img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
+                            <td class="d-flex align-items-center"><img th:src="@{/img/Encanto-153413687-large.jpg}" src="/img/Encanto-153413687-large.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
                             <td>Encanto</td>
                             <td>110 min</td>
                             <td>Animación-Aventura</td>
@@ -75,7 +75,7 @@
                             <td><button type="button" class="btn btn-dark btn-sm ms-2">20:00</button><p class="mt-2">5 butacas</p></td>
                         </tr>
                         <tr>
-                            <td class="d-flex align-items-center"><img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
+                            <td class="d-flex align-items-center"><img th:src="@{/img/Moonfall-138176660-large.jpg}" src="/img/Moonfall-138176660-large.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
                             <td>Moonfall</td>
                             <td>120 min</td>
                             <td>Ciencia-ficción</td>
