--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,11 +7,11 @@
 
 <body>
     <!-- ver https://getbootstrap.com/docs/5.0/examples/sticky-footer-navbar/ -->
-    <footer th:fragment="footer" class="footer mt-auto py-3 bg-light">
+    <footer th:fragment="footer" class="footer mt-auto py-3" style="background-color: #617073;">
         <div class="container">
-            <span class="text-muted">Aplicación de plantilla de IW 2021-22. Accede a la última versión (y propón mejoras, es
-            <a href="https://www.apache.org/licenses/LICENSE-2.0" />código abierto</a>) en el
-            <a href="https://github.com/manuel-freire/iw/blob/main/plantilla">repositorio oficial</a>.</span>
+            <span class="text-light">FilmAdmin - Aplicación para IW 2021-22. Accede a la última versión (y propón mejoras, es
+            <a class="text-light" href="https://www.apache.org/licenses/LICENSE-2.0" />código abierto</a>) en el
+            <a class="text-light" href="https://github.com/OteguiRules/FilmAdmin">repositorio oficial</a>.</span>
         </div>
         <!-- Bootstrap -->
         <script th:src="@{/js/bootstrap.bundle-5.1.3.js}" src="js/bootstrap.bundle-5.1.3.js"></script>
