--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -9,7 +9,7 @@
 
     <!-- barra de navegación bootstrap 5 -->
     <header th:fragment="nav">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #7a93ac;">
             <div class="container-fluid">
                 <!-- nombre del sitio; es un enlace que lleva a la página ppal -->
                 <a class="navbar-brand" th:href="@{/}" href="/">
@@ -25,20 +25,20 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-5">
                         <li class="nav-item mx-3">
-                            <a class="nav-link" th:href="@{/peliculas/}">Películas</a>
+                            <a class="nav-link text-light" th:href="@{/peliculas/}">Películas</a>
                         </li>
                         <li class="nav-item mx-3">
-                            <a class="nav-link" th:href="@{/cines/}">Cines</a>
+                            <a class="nav-link text-light" th:href="@{/cines/}">Cines</a>
                         </li>
 
                         <th:block th:if="${session.u}">
                             <li class="nav-item mx-3">
-                                <a class="nav-link" th:if="${session.u.hasRole('ADMIN')}"
+                                <a class="nav-link text-light" th:if="${session.u.hasRole('ADMIN')}"
                                     th:href="@{/admin/gestion-entradas/}">Gestión de Entradas</a>
                             </li>
 
                             <li class="nav-item mx-3">
-                                <a class="nav-link" th:if="${session.u.hasRole('ADMIN')}" th:href="@{/admin/}">Panel de
+                                <a class="nav-link text-light" th:if="${session.u.hasRole('ADMIN')}" th:href="@{/admin/}">Panel de
                                     Administración</a>
                             </li>
                         </th:block>
@@ -46,7 +46,7 @@
                     <th:block th:if="${session.u}">
                         <ul class="navbar-nav ms-auto me-5">
                             <li class="nav-item align-self-center me-3">
-                                <a class="nav-link" th:if="${!session.u.hasRole('ADMIN')}"
+                                <a class="nav-link text-light" th:if="${!session.u.hasRole('ADMIN')}"
                                     th:href="@{/atencion-cliente/}">Atención al Cliente
                                     <button type="button" class="btn btn-outline-primary btn-sm position-relative">
                                         ✉️ <span id="nav-unread"
@@ -54,9 +54,9 @@
                                             <span class="visually-hidden">unread messages</span></span>
                                     </button>
                                 </a>
-                                <a class="nav-link" th:if="${session.u.hasRole('ADMIN')}"
+                                <a class="nav-link text-light" th:if="${session.u.hasRole('ADMIN')}"
                                     th:href="@{/admin/atencion-cliente}">Atención al Cliente
-                                    <button type="button" class="btn btn-outline-primary btn-sm position-relative ms-2">
+                                    <button type="button" class="btn btn-outline-light btn-sm position-relative ms-2">
                                         ✉️ <span id="nav-unread"
                                             class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-secondary">+99
                                             <span class="visually-hidden">unread messages</span></span>
@@ -66,13 +66,13 @@
                             <li class="nav-item me-3">
                                 <a class="nav-link" th:href="@{/user/{id}(id=${session.u.id})}">
                                     <img class="iwthumb rounded" th:src="@{/user/{id}/pic(id=${session.u.id})}">
-                                    <span th:text="${session.u.username}">Pepe</span>
+                                    <span class="text-light" th:text="${session.u.username}">Pepe</span>
                                 </a>
                             </li>
 
                             <li class="nav-item align-self-center">
                                 <form th:action="@{/logout}" method="post">
-                                    <button type="submit" class="btn btn-outline-secondary btn-sm">logout</button>
+                                    <button type="submit" class="btn btn-outline-light btn-sm">logout</button>
                                 </form>
                             </li>
                         </ul>
