Listado peliculas terminado

--- a/src/main/resources/templates/peliculas.html
+++ b/src/main/resources/templates/peliculas.html
@@ -30,7 +30,7 @@
                         <button type="button" class="btn btn-dark ms-2">Duración ↓</button>
                     </form>
                 </div>
-                <div class="table-responsive tabla mt-5">
+                <div class="table-responsive tabla mt-3">
                     <table class="table align-middle">
                       <thead></thead>
                       <tbody>
@@ -42,7 +42,7 @@
                             <td><button type="button" class="btn btn-dark btn-sm ms-3">12:00</button><p class="mt-2">10 butacas</p></td>
                             <td><button type="button" class="btn btn-dark btn-sm ms-2">15:00</button><p class="mt-2">7 butacas</p></td>
                             <td><button type="button" class="btn btn-dark btn-sm ms-2" disabled>18:00</button><p class="mt-2 text-danger bold">AGOTADO</p></td>
-                            <td><button type="button" class="btn btn-dark btn-sm ms-2">21:00</button><p class="mt-2 text-danger">2 butacas</p></td>
+                            <td><button type="button" class="btn btn-dark btn-sm ms-2">21:00</button><p class="mt-2 text-danger bold">2 butacas</p></td>
                         </tr>
                         <tr>
                             <td class="d-flex align-items-center"><img th:src="@{/img/Delicioso-886756010-mmed.jpg}" src="/img/Delicioso-886756010-mmed.jpg" alt="imagen pelicula" height="120px" width="84px" class="d-inline-block"></td>
@@ -50,7 +50,7 @@
                             <td>112 min</td>
                             <td>Comedia-Historia</td>
                             <td><button type="button" class="btn btn-dark btn-sm ms-3">15:00</button><p class="mt-2">6 butacas</p></td>
-                            <td><button type="button" class="btn btn-dark btn-sm ms-2">18:00</button><p class="mt-2 text-danger">1 butaca</p></td>
+                            <td><button type="button" class="btn btn-dark btn-sm ms-2">18:00</button><p class="mt-2 text-danger bold">1 butaca</p></td>
                             <td></td>
                             <td></td>
                         </tr>
@@ -71,7 +71,7 @@
                             <td>Animación-Aventura</td>
                             <td><button type="button" class="btn btn-dark btn-sm ms-3">11:00</button><p class="mt-2">15 butacas</p></td>
                             <td><button type="button" class="btn btn-dark btn-sm ms-2">14:00</button><p class="mt-2">9 butacas</p></td>
-                            <td><button type="button" class="btn btn-dark btn-sm ms-2">17:00</button><p class="mt-2 text-danger">2 butacas</p></td>
+                            <td><button type="button" class="btn btn-dark btn-sm ms-2">17:00</button><p class="mt-2 text-danger bold">2 butacas</p></td>
                             <td><button type="button" class="btn btn-dark btn-sm ms-2">20:00</button><p class="mt-2">5 butacas</p></td>
                         </tr>
                         <tr>
