--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -13,7 +13,7 @@
             <div class="container-fluid">
                 <!-- nombre del sitio; es un enlace que lleva a la página ppal -->
                 <a class="navbar-brand" th:href="@{/}" href="/">
-                    <img th:src="@{/img/logo.png}" src="/img/logo.png" alt="logo IW" width="269" height="88"
+                    <img th:src="@{/img/filmadminlogowhite.png}" src="/img/filmadminlogowhite.png" alt="logo IW" width="269" height="88"
                         class="d-inline-block align-text-top">
                 </a>
                 <!-- menu hamburguesa si no cabe todo -->
