--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,15 @@
 
     <main class="flex-shrink-0">
         <div class="container">
-            <h1 class="mt-5">Bienvenid@</h1>
+            <div class="d-flex flex-column align-items-center justify-content-center">
+                <img th:src="@{/img/filmadminlogowhite.png}" src="/img/filmadminlogowhite.png" alt="imagen pelicula"
+                    height="351px" width="1074px" class="d-inline-block">
+                <div class="d-flex mt-5">
+                    <a th:href="@{/peliculas/}"><button type="button" class="btn btn-dark btn-lg mx-3">PELICULAS</button></a>
+                    <a th:href="@{/cines/}"><button type="button" class="btn btn-dark btn-lg mx-3">CINES</button></a>
+                    <a th:href="@{/atencion-cliente/}"><button type="button" class="btn btn-dark btn-lg mx-3">ATENCION AL CLIENTE</button></a>
+                </div>
+            </div>
         </div>
     </main>
 
