--- a/src/main/resources/templates/cines.html
+++ b/src/main/resources/templates/cines.html
@@ -10,8 +10,83 @@
     <header th:replace="fragments/nav.html :: nav"></header>
 
     <main class="flex-shrink-0">
-        <div class="container">
-            <h1 class="mt-5">Cines</h1>
+        <div class="container d-flex">
+            <div class="cines">
+                <h1 class="mt-5">Listado de Cines</h1>
+                <div class="d-flex">
+                    <div class="mad d-flex flex-column mt-5 me-5">
+                        <h2>Madrid</h2>
+                        <div class="cine d-flex align-items-center mt-3">
+                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                                width="84px" class="d-inline-block">
+                            <a th:href="@{/cines/la-gavia}" class="ms-2 bold text-dark">La Gavia</a>
+                        </div>
+                        <div class="cine d-flex align-items-center mt-3">
+                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                                width="84px" class="d-inline-block">
+                            <a th:href="@{/cines/plaza-rio-2}" class="ms-2 bold text-dark">Plaza Río 2</a>
+                        </div>
+                    </div>
+                    <div class="bcn d-flex flex-column mt-5 me-5">
+                        <h2>Barcelona</h2>
+                        <div class="cine d-flex align-items-center mt-3">
+                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                                width="84px" class="d-inline-block">
+                            <a th:href="@{/cines/barnasud}" class="ms-2 bold text-dark">Barnasud</a>
+                        </div>
+                        <div class="cine d-flex align-items-center mt-3">
+                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                                width="84px" class="d-inline-block">
+                            <a th:href="@{/cines/diagonal}" class="ms-2 bold text-dark">Diagonal</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex">
+                    <div class="vlc d-flex flex-column mt-5 me-5">
+                        <h2>Valencia</h2>
+                        <div class="cine d-flex align-items-center mt-3">
+                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                                width="84px" class="d-inline-block">
+                            <a th:href="@{/cines/bonaire}" class="ms-2 bold text-dark">Bonaire</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mapa-info ms-5">
+                <div class="d-flex justify-content-center mt-5"><h2 class="mt-5">La Gavia</h2></div>
+                <div class="d-flex justify-content-center">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.7973319854436!2d-3.601224384308786!3d40.369017966463225!2m3!1f0!2f0!3f0!3m2!1i1024!
+                    2i768!4f13.1!3m3!1m2!1s0xd4224dc15dad579%3A0xcbf9370ac84ce0db!2sCC%20La%20Gavia!5e0!3m2!1ses!2ses!4v1645031698047!5m2!1ses!2ses" 
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="mt-5"></iframe>
+                    <div class="info mt-5 ms-5">
+                        <p>Dirección: C/Adolfo Bioy Casares, 2, 28051 Madrid</p>
+                        <p>Horario: 10:00 - 22:00</p>
+                        <p>Teléfono: 914255401</p>
+                        <div id="carouselExampleControls" class="carousel slide mt-5" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img th:src="@{/img/imagencine.jpg}" src="/img/imagencine.jpg" class="d-block imgcarousel" alt="...">
+                              </div>
+                              <div class="carousel-item">
+                                <img th:src="@{/img/imagencine2.jpg}" src="/img/imagencine2.jpg" class="d-block imgcarousel" alt="...">
+                              </div>
+                              <div class="carousel-item">
+                                <img th:src="@{/img/imagencine3.jpg}" src="/img/imagencine3.jpg" class="d-block imgcarousel" alt="...">
+                              </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                              <span class="visually-hidden">Next</span>
+                            </button>
+                          </div>
+                    </div>
+                </div>
+                
+            </div>
         </div>
     </main>
 
