--- a/src/main/resources/templates/cines.html
+++ b/src/main/resources/templates/cines.html
@@ -17,12 +17,12 @@
                     <div class="mad d-flex flex-column mt-5 me-5">
                         <h2>Madrid</h2>
                         <div class="cine d-flex align-items-center mt-3">
-                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                            <img th:src="@{/img/lagavia.jpg}" src="/img/lagavia.jpg" alt="imagen cine" height="120px"
                                 width="84px" class="d-inline-block">
                             <a th:href="@{/cines/la-gavia}" class="ms-2 bold text-dark">La Gavia</a>
                         </div>
                         <div class="cine d-flex align-items-center mt-3">
-                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                            <img th:src="@{/img/plazario2.jpg}" src="/img/plazario2.jpg" alt="imagen cine" height="120px"
                                 width="84px" class="d-inline-block">
                             <a th:href="@{/cines/plaza-rio-2}" class="ms-2 bold text-dark">Plaza Río 2</a>
                         </div>
@@ -30,12 +30,12 @@
                     <div class="bcn d-flex flex-column mt-5 me-5">
                         <h2>Barcelona</h2>
                         <div class="cine d-flex align-items-center mt-3">
-                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                            <img th:src="@{/img/barnasud.jpg}" src="/img/barnasud.jpg" alt="imagen cine" height="120px"
                                 width="84px" class="d-inline-block">
                             <a th:href="@{/cines/barnasud}" class="ms-2 bold text-dark">Barnasud</a>
                         </div>
                         <div class="cine d-flex align-items-center mt-3">
-                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                            <img th:src="@{/img/diagonal.png}" src="/img/diagonal.png" alt="imagen cine" height="120px"
                                 width="84px" class="d-inline-block">
                             <a th:href="@{/cines/diagonal}" class="ms-2 bold text-dark">Diagonal</a>
                         </div>
@@ -45,7 +45,7 @@
                     <div class="vlc d-flex flex-column mt-5 me-5">
                         <h2>Valencia</h2>
                         <div class="cine d-flex align-items-center mt-3">
-                            <img th:src="@{/img/img1.jpg}" src="/img/img1.jpg" alt="imagen cine" height="120px"
+                            <img th:src="@{/img/bonaire.jpg}" src="/img/bonaire.jpg" alt="imagen cine" height="120px"
                                 width="84px" class="d-inline-block">
                             <a th:href="@{/cines/bonaire}" class="ms-2 bold text-dark">Bonaire</a>
                         </div>
