--- a/src/main/resources/templates/peliculas.html
+++ b/src/main/resources/templates/peliculas.html
@@ -26,7 +26,7 @@
                       </select>
                       <form class="d-flex w-75 ms-5">
                         <input type="text" placeholder="Busca un título o una categoría" class="w-75">
-                        <button type="button" class="btn btn-dark ms-2">A ↓</button>
+                        <button type="button" class="btn btn-dark ms-2">A-Z ↓</button>
                         <button type="button" class="btn btn-dark ms-2">Duración ↓</button>
                     </form>
                 </div>
